--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-boilerplate",
   "version": "4.0.0",
+  "homepage": "https://ketan18710.github.io/K-life",
   "description": "A highly scalable, offline-first foundation with the best DX and a focus on performance and best practices",
   "repository": {
     "type": "git",
@@ -42,7 +43,9 @@
     "test": "cross-env NODE_ENV=test jest --coverage",
     "test:watch": "cross-env NODE_ENV=test jest --watchAll",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "prettify": "prettier --write"
+    "prettify": "prettier --write",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": [
     "last 2 versions",
@@ -71,6 +74,7 @@
     "cross-env": "5.2.0",
     "express": "4.16.4",
     "fontfaceobserver": "2.1.0",
+    "gh-pages": "^3.1.0",
     "history": "4.9.0",
     "hoist-non-react-statics": "3.3.0",
     "immer": "3.0.0",
@@ -142,7 +146,6 @@
     "jest-dom": "3.1.3",
     "jest-styled-components": "6.3.1",
     "lint-staged": "8.1.5",
-    "ngrok": "3.1.1",
     "node-plop": "0.18.0",
     "null-loader": "0.1.1",
     "offline-plugin": "5.0.6",
@@ -162,7 +165,7 @@
     "svg-url-loader": "2.3.2",
     "terser-webpack-plugin": "1.2.3",
     "url-loader": "1.1.2",
-    "webpack": "4.30.0",
+    "webpack": "^4.36.0",
     "webpack-cli": "3.3.0",
     "webpack-dev-middleware": "3.6.2",
     "webpack-hot-middleware": "2.24.3",
