--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "react-boilerplate",
   "version": "4.0.0",
-  "homepage": "https://ketan18710.github.io/K-life",
   "description": "A highly scalable, offline-first foundation with the best DX and a focus on performance and best practices",
   "repository": {
     "type": "git",
@@ -43,9 +42,7 @@
     "test": "cross-env NODE_ENV=test jest --coverage",
     "test:watch": "cross-env NODE_ENV=test jest --watchAll",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "prettify": "prettier --write",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "prettify": "prettier --write"
   },
   "browserslist": [
     "last 2 versions",
@@ -74,7 +71,6 @@
     "cross-env": "5.2.0",
     "express": "4.16.4",
     "fontfaceobserver": "2.1.0",
-    "gh-pages": "^3.1.0",
     "history": "4.9.0",
     "hoist-non-react-statics": "3.3.0",
     "immer": "3.0.0",
