--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "compression": "1.7.4",
     "connected-react-router": "6.4.0",
     "cross-env": "5.2.0",
-    "express": "4.16.4",
+    "express": "^4.16.4",
     "fontfaceobserver": "2.1.0",
     "history": "4.9.0",
     "hoist-non-react-statics": "3.3.0",
@@ -80,6 +80,7 @@
     "lodash": "4.17.11",
     "minimist": "1.2.0",
     "node-sass": "^4.14.1",
+    "nodemon": "^2.0.7",
     "prop-types": "15.7.2",
     "raw-loader": "^4.0.2",
     "react": "16.8.6",
