--- a/package.json
+++ b/package.json
@@ -65,10 +65,12 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.4.3",
+    "aws-sdk": "^2.881.0",
     "chalk": "^2.4.2",
     "compression": "1.7.4",
     "connected-react-router": "6.4.0",
     "cross-env": "5.2.0",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "fontfaceobserver": "2.1.0",
     "history": "4.9.0",
@@ -79,6 +81,8 @@
     "ip": "1.1.5",
     "lodash": "4.17.11",
     "minimist": "1.2.0",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.7",
     "prop-types": "15.7.2",
