--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "ip": "1.1.5",
     "lodash": "4.17.11",
     "minimist": "1.2.0",
+    "mongoose": "^5.12.3",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "node-sass": "^4.14.1",
