--- a/Node Server/.env
+++ b/Node Server/.env
@@ -1,4 +1,4 @@
 DB_CONNECTION = 'mongodb+srv://kanav:loopedincode@cluster0.fmyxu.mongodb.net/myFirstDatabase?retryWrites=true&w=majority'
-secretAccessKey= '/lnon2Fr8UkaFjtjJZ64YspGN9kTTC39lOI90hme'
-accessKeyId= 'AKIASMWGVJMRWUJEM5LE'
+secretAccessKey= '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'
+accessKeyId= 'AKIASMWGVJMRZJXR4VUO'
 region= 'ap-south-1'
