--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.4.3",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@tinymce/tinymce-react": "^3.12.2",
     "aws-sdk": "^2.881.0",
     "chalk": "^2.4.2",
@@ -93,16 +95,17 @@
     "react-dom": "16.8.6",
     "react-helmet": "6.0.0-beta",
     "react-intl": "2.8.0",
+    "react-particles-js": "^3.5.3",
     "react-redux": "7.0.2",
     "react-router-dom": "^5.1.0",
+    "react-slick": "^0.28.1",
+    "react-swipeable": "^6.2.0",
     "react-toastify": "^7.0.3",
     "redux": "4.0.1",
     "redux-saga": "1.0.2",
     "reselect": "4.0.0",
     "sanitize.css": "8.0.0",
     "sass-loader": "^9.0.3",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.3",
     "styled-components": "4.2.0"
   },
   "devDependencies": {
